some changes to the include

--- a/_includes/shop-item.html
+++ b/_includes/shop-item.html
@@ -1,2 +1,2 @@
-{{page.product_name}}
-<img src="{{page.product_image}}" alt="drawing of (flower)">
+<h2> {{page.product_name}} </h2>
+<img src="{{page.product_image}}" alt="{{page.img_alt}}">
