How about changing site-title attribute, and seeing if it takes as long as changing the background?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,9 +6,9 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: white;
+    background-color: blue;
     margin: 100px,0px;
 }
-titles_sites{
+site-title{
 font-size: small;
 }
