Made a bigger change, but same "command" basically

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,9 +6,9 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: blue;
+    background-color: green;
     margin: 100px,0px;
 }
 site-title{
-font-size: small;
+font-size: 200px;
 }
