--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: green;
+    background-color: skyblue;
     margin: 100px,0px;
 }
 .site-title{
