Discovered page title, hope I can create a difference, same scenario: change size for the title, and color of page.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,9 +6,13 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: skyblue;
+    background-color: violet;
     margin: 100px,0px;
 }
 //The Garden Project Size
 .site-title{
+}
+//what title?
+.page-title{
+    font-size: 10px;
 }
