Testing, again. This time the color should be blue. And the codes should work. And we will see what page.title will bring?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,13 +6,17 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: violet;
+    background-color: blueviolet;
     margin: 100px,0px;
 }
 //The Garden Project Size
 .site-title{
 }
-//what title?
-.page-title{
+//Don't know
+page.title{
     font-size: 200px;
+}
+//Something Else?
+.page-heading{
+    font-size: x-small;
 }
