Hoping to override anything with custom-variables.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: blueviolet;
+    background-color: orangered;
     margin: 100px,0px;
 }
 //The Garden Project Size
@@ -16,7 +16,7 @@ main{
 page.title{
     font-size: 200px;
 }
-//Something Else?
+//It is the Title, however it only applies to home?
 .page-heading{
     font-size: x-small;
 }
