Maybe I used the wrong class, and it's post-title? If not, I will have to look at a different layout.html.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: yellowgreen;
+    background-color: green;
     margin: 100px,0px;
 }
 //The Garden Project Size
@@ -21,6 +21,6 @@ page.title{
     font-size: x-small;
 }
 //This is the Title, for posts?
-.post-header{
+.post-title{
     font-size: x-small;
 }
