Changing attributes for different results

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,9 +18,9 @@ page.title{
 }
 //It is the Title, for home.
 .page-heading{
-    font-size: hidden;
+    font-size: 0px;
 }
 //This is the Title, for pages.
 .post-title{
-    font-size: hidden;
+    font-size: 0px;
 }
