Forgot to add a site color to see the changes.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: white;
+    background-color: burlywood;
     margin: 100px,0px;
 }
 //The Garden Project Size
@@ -18,7 +18,7 @@ page.title{
 }
 //It is the Title, for home.
 .page-heading{
-    font-size: 0px;
+    font-size: 10px;
 }
 //This is the Title, for pages.
 .post-title{
