Change the size of the word Hello! and return to white!!

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    background-color: burlywood;
+    background-color: white;
     margin: 100px,0px;
 }
 //The Garden Project Size
@@ -14,11 +14,10 @@ main{
 }
 //Don't know
 page.title{
-    font-size: 200px;
 }
 //It is the Title, for home.
 .page-heading{
-    font-size: 20px;
+    font-size: 30px;
 }
 //This is the Title, for pages.
 .post-title{
