Let's see if tiff registers as a background?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,8 +12,9 @@ main{
 //The Garden Project Size
 .site-title{
 }
-//Don't know
-page.title{
+//Page content Editting
+.page-content{
+    background-image: pastel-plant-pattern.tiff;
 }
 //It is the Title, for home.
 .page-heading{
