Trying different ways to assert it into the code?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ main{
 }
 //Page content Editting
 .page-content{
-    background-image: pastel-plant-pattern.tiff;
+    background-image: pastel-plant-pattern;
 }
 //It is the Title, for home.
 .page-heading{
