fixing the coding syntax?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@ main{
 }
 //Page content Editting
 .page-content{
-    background-image: pastel-plant-pattern.jpg;
+    background-image: pastelPlantPattern.jpg;
     margin: auto;
 }
 //It is the Title, for home.
