We're going to try to find a different way, thanks to the internet.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@ main{
 }
 //Page content Editting
 .page-content{
-    background-image: pastelPlantPattern.tiff;
+    background-image: pastelPlantPattern;
     margin: auto;
 }
 //It is the Title, for home.
