I think I figured the issue? Adding the directory instead of image name.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@ main{
 }
 //Page content Editting
 .page-content{
-    background-image: pastelPlantPattern;
+    background-image: "assets/pastelPlantPattern.tiff";
     margin: auto;
 }
 //It is the Title, for home.
