--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@
 @import "{{ site.theme }}";
 
 font{
-    font-family: Helvetica, sans-serif;
+    font-family:'Times New Roman', Times, serif
 }
 body{
     background-color: rgb(220, 243, 225);
