(might also change the dimensions?)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,7 @@ main{
 //Page content Editting
 .page-content{
     background-image: "lis786-GardenProject/assets/pastelPlantPattern.tiff";
-    margin: auto;
+    margin: 200px,0px;
 }
 //It is the Title, for home.
 .page-heading{
