also editing the footer

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,6 +12,9 @@ main{
     background-color: white;
     margin: 100px,0px;
 }
+footer{
+    margin: auto, 10px;
+}
 //The Garden Project Size
 .site-title{
 }
