Troubleshooting differences between main and page content !

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,7 @@ footer{
 }
 //Page content Editting
 .page-content{
-    background-image: "lis786-GardenProject/assets/pastelPlantPattern.tiff";
+    background-color:antiquewhite;
     margin: 200px,0px;
 }
 //It is the Title, for home.
