Also playing with footer.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@ main{
     margin: 100px,0px;
 }
 footer{
-    margin: auto, 10px;
+    margin: 10px, 10px;
 }
 //The Garden Project Size
 .site-title{
