Trying to figure the colors out, and why they aren't showing part 1

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,7 +24,7 @@ footer{
 }
 //Page content Editting
 .page-content{
-    background-color:antiquewhite;
+    background-color:rgb(127, 81, 22);
     margin: 200px,0px;
 }
 //It is the Title, for home.
