--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,6 +27,10 @@ footer{
     background-color:rgb(116, 108, 97);
     margin: 0px,0px;
 }
+//I wonder what the wrapper does
+.wrapper{
+    background-color: pink;
+}
 //It is the Title, for home.
 .page-heading{
     font-size: 30px;
