--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@
 @import "{{ site.theme }}";
 
 font{
-    font-family:'Times New Roman', Times, serif
+    font-family:'Times New Roman', Times, serif;
 }
 head{
     visibility: hidden;
