Trying to edit the size of page content.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,7 +16,7 @@ main{
     margin: auto;
 }
 footer{
-    visibility: hidden;
+    margin: 10px, 10px;
 }
 
 //The Garden Project Size
@@ -24,8 +24,8 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color:pink;
-    margin: 100px;
+    background-color:red;
+    margin: 100px, 0px;
 }
 //It is the Title, for home.
 .page-heading{
