Playing with the margins again

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,8 +24,8 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color:red;
-    margin: 100px, 0px;
+    background-color: orange;
+    margin: 10px, 30px;
 }
 //It is the Title, for home.
 .page-heading{
