Trying to figure out how to mess with the margins, again.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,7 +12,7 @@ body{
 }
 main{
     background-color: white;
-    margin: auto;
+    margin: 10px, 10px;
 }
 footer{
     margin: 10px, 10px;
@@ -23,8 +23,7 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color: yellow;
-    margin: 1000px, 30000px;
+    background-color: green;
 }
 //It is the Title, for home.
 .page-heading{
