--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,7 +12,7 @@ body{
 }
 main{
     background-color: white;
-    margin: 10px, 10px;
+    margin: 1000px, 1000px;
 }
 footer{
     margin: 10px, 10px;
@@ -23,7 +23,7 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color: green;
+    background-color: blue;
 }
 //It is the Title, for home.
 .page-heading{
