--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,7 +11,6 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    margin: 1000px, 1000px;
 }
 footer{
     margin: 10px, 10px;
@@ -22,9 +21,9 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color: blue;
+    background-color: purple;
     margins: auto;
-    fixed-width: 100px;
+    fixed-width: 50px;
 }
 //It is the Title, for home.
 .page-heading{
