another attempt with fixing page-content's width!!

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,9 +21,9 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color: purple;
+    background-color: red;
     margins: auto;
-    fixed-width: 50px;
+    width: 100px;
 }
 //It is the Title, for home.
 .page-heading{
