--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@ body{
 main{
 }
 footer{
-    margin: 10px, 10px;
+    padding:0px;
 }
 
 //The Garden Project Size
@@ -22,8 +22,8 @@ footer{
 //Page content is similar to main, as far as I know.
 .page-content{
     background-color: red;
-    margins: auto;
-    width: 100px;
+    margins: 100px, 100px;
+    width: 500px;
 }
 //It is the Title, for home.
 .page-heading{
