--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,7 +11,6 @@ body{
     background-color: rgb(220, 243, 225);
 }
 main{
-    margins:auto;
 }
 footer{
     padding:0px;
@@ -22,8 +21,8 @@ footer{
 }
 //Page content is similar to main, as far as I know.
 .page-content{
-    background-color: red;
-    margins: auto;
+    background-color: orange;
+    margin-right: auto;
     width: 500px;
 }
 //It is the Title, for home.
