--- a/assets/main.scss
+++ b/assets/main.scss
@@ -22,8 +22,9 @@ footer{
 //Page content is similar to main, as far as I know.
 .page-content{
     background-color: orange;
-    margin-right: auto;
     width: 500px;
+    margin-right: auto;
+    margin-left: auto;
 }
 //It is the Title, for home.
 .page-heading{
