FInally attempting the background image

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ font{
     background-color: rgb(220, 243, 225);
 }
 body{
-    background-color:white;
+    background-image:"lis786-GardenProject/assets/pastelPlantPattern.tiff";
 }
 
 footer{
