I have been doing it wrong the entire time!

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ font{
     background-color: rgb(220, 243, 225);
 }
 body{
-    background-image: "main/assets/pastelPlantPattern.jpg";
+    background-image: ("/assets/pastelPlantPattern.jpg");
 }
 
 footer{
