I think I figured out the image insertion, let's see!

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ font{
     background-color: rgb(220, 243, 225);
 }
 body{
-    background-image: url("/assets/pastelPlantPattern.jpg");
+    background-image: url(/assets/pastelPlantPattern.jpg);
 }
 
 footer{
