--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,7 @@ font{
     background-color: rgb(220, 243, 225);
 }
 body{
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
 }
 
 footer{
