--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@ body{
 
 //exploring footer classes!
 .site-footer{
-    background-color: red;
+    padding:0px;
 }
 .site-footer h-card{
     background-color: orange;
