--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,15 +13,11 @@ body{
 
 //exploring footer classes!
 .site-footer{
+    background-color: rgb(220, 243, 225);
     padding:0px;
+    margin:0px;
+    border:0px;
 }
-.site-footer h-card{
-    background-color: orange;
-}
-.site-footer-col{
-    background-color: yellow;
-}
-
 //The Garden Project Size
 .site-title{
 }
