Adding a shadow for curiousity sake?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,6 +17,7 @@ body{
     padding:3px;
     margin:0px;
     border:0px;
+    box-shadow: 1px -7px 90px black;
 }
 //The Garden Project Size
 .site-title{
