--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,10 +14,10 @@ body{
 //exploring footer classes!
 .site-footer{
     background-color: rgb(220, 243, 225);
-    padding:25px;
+    padding:12px;
     margin:0px;
     border:0px;
-    box-shadow: 1px -6px 30px black;
+    box-shadow: 1px -1px 15px grey;
 }
 //The Garden Project Size
 .site-title{
