--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ body{
 //exploring footer classes!
 .site-footer{
     background-color: rgb(220, 243, 225);
-    padding:5px;
+    padding:20px 0px 0px 0px;
     margin:0px;
     border:0px;
     box-shadow: 1px 0px 10px grey;
