--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@ body{
     padding:20px 0px 0px 0px;
     margin:0px;
     border:0px;
-    box-shadow: 1px 0px 10px grey;
+    box-shadow: 1px 0px 5px rgb(207, 207, 207);
 }
 //The Garden Project Size
 .site-title{
