--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,6 +28,7 @@ body{
     width: 1000px;
     margin-right: auto;
     margin-left: auto;
+    box-shadow: 0px 0px 1px rgb(207, 207, 207);
 }
 //It is the Title, for home.
 .page-heading{
