--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,11 +6,15 @@
 .site-header{
     background-color: white;
     box-shadow: -1px 0px 4px rgb(207, 207, 207);
-    padding: 5px;
+    padding: 19px;
 }
 //The Garden Project Size
 .site-title{
-    font-size: 70px;
+    font-size: 50px;
+}
+.site-title a:hover{
+    text-decoration: none;
+    color: grey;
 }
 .menu-icon{
     background-color: blue;
