--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@
     color: grey;
 }
 .menu-icon{
-    background-color: blue;
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pothos1024_1.jpg);
 }
 .site-nav{
     font-size: 20px;
