--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,6 +16,9 @@
     text-decoration: none;
     color: grey;
 }
+.site-title::before{
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pothos1024_1.jpg);
+}
 .menu-icon{
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pothos1024_1.jpg);
 }
