--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,10 +17,10 @@
     color: grey;
 }
 .site-title ::before{
-    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png);
+    content: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png);
 }
 .site-title ::before :hover{
-    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov2.png);
+    content: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov2.png);
 }
 .site-nav{
     font-size: 20px;
