--- a/_includes/custom-header.html
+++ b/_includes/custom-header.html
@@ -1,1 +1,2 @@
-<img src="https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png" alt="Plant in planter, logo">
+{% if site.logo %}
+    <img src="https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png" alt="Plant in planter, logo" height="56">
