testing hover on site title too

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,11 +10,11 @@
 }
 //The Garden Project Size
 .site-title{
-    font-size: 40px;
+    font-size: 35px;
 }
 .site-title a:hover{
     text-decoration: none;
-    color: grey;
+    color: red;
 }
 .logo{
     width: 30px;
