Changing hover effects

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,7 +12,7 @@
 .site-title{
     font-size: 35px;
 }
-.site-title a:hover{
+a:hover{
     text-decoration: none;
     color: red;
 }
@@ -24,7 +24,7 @@
     content: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov2.png);
 }
 .site-nav{
-    font-size: 20px;
+    font-size: 15px;
 }
 
 
