Changes for logo

--- a/_includes/custom-header.html
+++ b/_includes/custom-header.html
@@ -1,2 +1,3 @@
+<a class="site-title" href="{{ site.baseurl }}/"></a>
 {% if site.logo %}
-    <img src="https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png" alt="Plant in planter, logo" height="56">
+    <img src="https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png" alt="Plant in planter, logo" class="site-logo" width="150" height="56">
