--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,8 +14,7 @@ a {
     }
   
     &:hover {
-      color: red;
-      text-decoration: underline;
+      color: $brand-color;
     }
 }
 
@@ -32,7 +31,6 @@ a {
 //The Garden Project Size
 .site-title{
     font-size: 35px;
-    font-weight: bold;
 }
 a:hover{
     text-decoration: none;
