trying to figure out a way to do something

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,22 +1,9 @@
 ---
 ---
 
-$text-color:       #111;
+$text-color:       none;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
-
-a {
-    color: $brand-color;
-    text-decoration: none;
-  
-    &:visited {
-      color: darken($brand-color, 15%);
-    }
-  
-    &:hover {
-      color: $brand-color;
-    }
-}
 
     
 @import "minima";
