trying to find a way to change the hover qualities

--- a/custom-variables.scss
+++ b/custom-variables.scss
@@ -1,9 +1,11 @@
 $brand-color: orange;
 
+a:hover {
+    color: blue;
+    text-decoration: none;
+  }
+  
 @import "minima";
 
 
 
-a:hover {
-  color: blue;
-}
