I lied, I am attempting it again.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,6 +18,9 @@ $brand-color:      #2a7ae2;
 .site-title{
     font-size: 35px;
 }
+a, a:hover {
+    color: #0037B3;
+  }
 .site-logo{
     width: 30px;
     height: 30px;
