hoping to edit the hover element a little more?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,7 @@ $brand-color:      #2a7ae2;
 .site-title{
     font-size: 35px;
 }
-a, a:hover {
+a:hover {
     text-decoration: none;
     color: $brand-color;
     background-color: grey;
