--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,8 +1,9 @@
 ---
 ---
 
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$lm-link-base-color:       red;
+$lm-link-visited-color:    orange;
+$lm-link-hover-color:      yellow;
 
     
 @import "minima";
