removing logo for time being

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,7 +25,7 @@ a:hover {
     background-color: orange;
   }
   .site-title::before {
-	content: url("https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png");
+	content: url(");
 	display: inline-block;
 	position: relative;
 	width: 0px;
