--- a/custom-variables.scss
+++ b/custom-variables.scss
@@ -1,4 +1,7 @@
-$link-hover-color 
-
+$link-base-color:       red;
+$link-visited-color:    orange;
+$link-hover-color:      yellow;
+ 
+@import "minima";
 
 
