--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,11 @@
 ---
 ---
+$base-font-size:   16px !default;
+$base-font-weight: 200 !default;
+$small-font-size:  $base-font-size * 0.8 !default;
+$base-line-height: 1.5 !default;
+
+
 @import "{{ site.theme }}";
 
 .site-header{
