Another attempt at color changing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,6 +20,12 @@ $base-line-height: 20 !default;
 .site-title:hover{
     color:red;
 }
+.name{
+    color:orange;
+}
+.name:hover{
+    color:yellow;
+}
 a:hover {
     text-decoration: none;
   }
