--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,6 +6,7 @@ $small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 20 !default;
 
 
+@import "minima";
 @import "{{ site.theme }}";
 
 .site-header{
