adding the height change

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,7 +27,8 @@ a:hover {
 	content: url("https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/logov1.png");
 	display: inline-block;
 	position: relative;
-	width: 37px;
+	width: 32px;
+    height:32px;
 	top: 5px;
 }
 .site-nav{
