--- a/assets/main.scss
+++ b/assets/main.scss
@@ -44,7 +44,7 @@ body{
     margin-left: auto;
     box-shadow: 0px 0px 5px rgb(207, 207, 207);
 }
-//It is the Title, for home.
+//It is the heading?, for home.
 .page-heading{
     font-size: 30px;
 }
