Fixing some mistakes.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,9 +16,10 @@
 .site-title:hover{
     color:red;
 }
-logo:{
+.logo{
     height:30px;
     width:30px;
+    margin-right:10000px;
 }
 a:hover {
     text-decoration: none;
