--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,7 +19,7 @@
 .logo{
     height:60px;
     width:60px;
-    margin-right:1000000px;
+    display: inline-block;
 }
 a:hover {
     text-decoration: none;
@@ -44,7 +44,7 @@ body{
 //Page content is basically the center wrap
 .page-content{
     background-color: white;
-    width: 1500px;
+    width: 1200px;
     margin-right: auto;
     margin-left: auto;
     box-shadow: 0px 0px 5px rgb(207, 207, 207);
