--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,6 +20,7 @@
     height:60px;
     width:60px;
     display: inline-block;
+    box-align:left justify;
 }
 a:hover {
     text-decoration: none;
