--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,7 +21,7 @@
     top: 0px;
     height:60px;
     width:60px;
-    box-align:left justify;
+    align:left;
 }
 a:hover {
     text-decoration: none;
