--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,8 @@
     height:60px;
     width:60px;
     float: left;
-    margin-left: 200px;
+    margin-left: 400px;
+    margin-bottom: 10px;
 }
 //The Garden Project Size
 .site-title{
