--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@
     width:60px;
     float: left;
     margin-left: 400px;
-    margin-bottom: 1000px;
+    margin-top: 0px;
 }
 //The Garden Project Size
 .site-title{
