--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,11 +10,12 @@
     padding: 10px;
 }
 .logo{
+    position:relative;
     height:60px;
     width:60px;
     float: left;
     margin-left: 400px;
-    top: -5px;
+    top: -100px;
 }
 //The Garden Project Size
 .site-title{
