Fixing my errors :(

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,6 +18,12 @@
     top: -10px;
 }
 .logoAlt{
+    position:relative;
+    height:80px;
+    width:80px;
+    float: left;
+    margin-left: 400px;
+    top: -10px;
     display: hidden;
 }
 .logoAlt:hover{
