trying to figure out why it isn't appearing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,7 @@
     top: -10px;
 }
 .logoAlt{
-    position:relative;
+    position:absolute;
     height:80px;
     width:80px;
     float: left;
