--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,11 +18,10 @@
     top: -10px;
 }
 .logoAlt{
-    position:relative;
+    position:absolute;
     height:80px;
     width:80px;
     float: left;
-    margin-left: 400px;
     top: -10px;
     opacity: 0;
 }
