--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,12 +33,9 @@
     font-size: 35px;
 }
 .site-title:hover{
-    color:red;
-}
-
-a:hover {
+    color:greenyellow;
     text-decoration: none;
-  }
+}
 .site-nav{
     font-size: 15px;
 }
