--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,12 +41,13 @@
 }
 
 body{
-    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
+    background-color: rgb(220, 243, 225);
 }
+// url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg)
 
 //exploring footer classes!
 .site-footer{
-    background-color: rgb(220, 243, 225);
+    background-color: white;
     padding:20px 0px 0px 0px;
     margin:0px;
     border:0px;
@@ -59,7 +60,7 @@ body{
     width: 1250px;
     margin-right: auto;
     margin-left: auto;
-    box-shadow: 0px 0px 5px rgb(207, 207, 207);
+    //box-shadow: 0px 0px 5px rgb(207, 207, 207);
 }
 //It is the heading?, for home.
 .page-heading{
