logo moved over, hover color changed

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,7 +23,7 @@
     width:80px;
     top: 0px;
     opacity: 0;
-    margin-left: -77px;
+    margin-left: -79px;
 }
 .logoAlt:hover{
     opacity: 1;
@@ -33,7 +33,7 @@
     font-size: 35px;
 }
 .site-title:hover{
-    color:greenyellow;
+    color:#e6c5f0;
     text-decoration: none;
 }
 .site-nav{
