editing site-nav just a tad, and making a semi-bold?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -38,7 +38,9 @@
     text-decoration: none;
 }
 .site-nav{
-    font-size: 15px;
+    font-size: 17px;
+    top: -10px;
+    font-weight: 600;
 }
 
 body{
