--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,13 +56,17 @@ body{
     //box-shadow: 1px 0px 4px rgb(207, 207, 207);
 }
 
-//Page content is basically the center wrap
+//Page content is basically the body's background in essence!
 .page-content{
     background-color: white;
     width: 1300px;
     margin-right: auto;
     margin-left: auto;
     box-shadow: 0px 0px 5px rgb(207, 207, 207);
+}
+//Figuring out what wrapper controls 
+.wrapper{
+    width: 1000px;
 }
 //It is the heading?, for home.
 .page-heading{
