--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@
 
 .site-header{
     background-color: white;
-    //box-shadow: -1px 0px 4px rgb(207, 207, 207);
+    box-shadow: -1px 0px 4px rgb(207, 207, 207);
     padding: 10px;
 }
 .logo{
