--- a/assets/main.scss
+++ b/assets/main.scss
@@ -62,7 +62,7 @@ body{
     width: 1300px;
     margin-right: auto;
     margin-left: auto;
-    box-shadow: 0px 0px 5px rgb(207, 207, 207);
+    //box-shadow: 0px 0px 5px rgb(207, 207, 207);
 }
 //Figuring out what wrapper controls 
 .wrapper{
