changing homepage look

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -44,7 +44,7 @@
 }
 
 body{
-    background-color: rgb(220, 243, 225);
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
 }
 
 //exploring footer classes!
