bringing back the box shadows

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,7 +53,7 @@ body{
     padding: 15px 0px 0px 0px;
     margin:0px;
     border:0px;
-    //box-shadow: 1px 0px 4px rgb(207, 207, 207);
+    box-shadow: 1px 0px 4px rgb(207, 207, 207);
 }
 
 //Page content is basically the body's background in essence!
@@ -62,7 +62,7 @@ body{
     width: 1400px;
     margin-right: auto;
     margin-left: auto;
-    //box-shadow: 0px 0px 5px rgb(207, 207, 207);
+    box-shadow: 0px 0px 5px rgb(207, 207, 207);
 }
 //Figuring out what wrapper controls 
 .wrapper{
