trying to change appearances

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,7 +31,7 @@
 //The Garden Project Size
 .site-title{
     font-size: 35px;
-    top: -200px;
+    padding-top: 10px;
 }
 .site-title:hover{
     color:#e6c5f0;
@@ -39,8 +39,8 @@
 }
 .site-nav{
     font-size: 17px;
-    top: -10px;
-    font-weight: 500;
+    padding-top: 10px;
+    font-weight: 400;
 }
 
 body{
