adding some hover effects for the nav, so that it looks less "popping out"

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,7 +41,11 @@
     font-size: 13px;
     padding-top: 50px;
     padding-bottom: 0px;
-    font-weight: 400;
+    font-weight: 380;
+    color:rgb(71, 71, 71)
+}
+.site-nav:hover{
+    color:black;
 }
 
 body{
