trying to see if this random input does anything at all before heading forward

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -50,7 +50,7 @@
 
 body{
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
-    opacity: 0.8;
+    background: image opacity 0.8;
 }
 
 //exploring footer classes!
