--- a/assets/main.scss
+++ b/assets/main.scss
@@ -48,10 +48,9 @@
     color:black;
 }
 
-body{
+/*body{
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
-    background: image opacity 0.8;
-}
+}*/
 
 //exploring footer classes!
 .site-footer{
@@ -68,7 +67,7 @@ body{
     width: 1270px;
     margin-right: auto;
     margin-left: auto;
-    box-shadow: 0px 0px 5px rgb(207, 207, 207);
+    //box-shadow: 0px 0px 5px rgb(207, 207, 207);
 }
 //It is the heading?, for home.
 .page-heading{
