--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,10 +2,11 @@
  * Site header
  */
  .site-header {
-    border-top: 0px solid $border-color-03;
+    border-top: 1px solid $border-color-03;
     border-bottom: 1px solid $border-color-01;
     min-height: $spacing-unit * 1.865;
     line-height: $base-line-height * $base-font-size * 2.25;
+    opacity: 0;
   
     // Positioning context for the mobile navigation icon
     position: relative;
