--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,7 +39,7 @@
 }
 .site-nav{
     font-size: 14px;
-    padding-top: 60px;
+    margin-top: 60px;
     padding-bottom: 0px;
     font-weight: 380;
     color:rgb(71, 71, 71)
