--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
  .site-header {
-    border-top: 1px solid $border-color-03;
-    border-bottom: 1px solid $border-color-01;
+    border-top: 1px none $border-color-03;
+    border-bottom: 1px none $border-color-01;
     min-height: $spacing-unit * 1.865;
     line-height: $base-line-height * $base-font-size * 2.25;
     opacity: 0;
