fixing the margins

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,8 +39,8 @@
 }
 .site-nav{
     font-size: 14px;
-    margin-top: 60px;
-    padding-bottom: 0px;
+    margin-top: 50px;
+    margin-bottom: 0px;
     font-weight: 380;
     color:rgb(71, 71, 71)
 }
