--- a/assets/main.scss
+++ b/assets/main.scss
@@ -52,6 +52,13 @@
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
 }*/
 
+//Gallery
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+
 //exploring footer classes!
 .site-footer{
     background-color: white;
