remove text decor

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -52,6 +52,10 @@
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
 }*/
 
+a{
+    text-decoration: none;
+}
+
 //Gallery
 .column {
     float: left;
