--- a/assets/main.scss
+++ b/assets/main.scss
@@ -82,7 +82,8 @@ a{
 }
 //It is the heading?, for home.
 .page-heading{
-    font-size: 30px;
+    font-size: 12px;
+    text-align: center;
 }
 //This is the Title, for pages.
 .post-title{
