--- a/assets/main.scss
+++ b/assets/main.scss
@@ -52,7 +52,7 @@
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
 }*/
 
-a{
+.links{
     text-decoration: none;
 }
 
