why is the padding so off??

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,6 +85,7 @@
 .page-heading{
     font-size: 15px;
     text-align: center;
+    padding: 2px;
 }
 //This is the Title, for pages.
 .post-title{
