--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,7 +85,8 @@
 .page-heading{
     font-size: 15px;
     text-align: center;
-    padding: 2px;
+    margin-top: 0px;
+    padding: 0px;
 }
 //This is the Title, for pages.
 .post-title{
