--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,7 +42,7 @@
     margin-top: 50px;
     margin-bottom: 0px;
     font-weight: 380;
-    color:rgb(71, 71, 71)
+    color:rgb(129, 129, 129)
 }
 .site-nav:hover{
     color:black;
@@ -85,8 +85,10 @@
 .page-heading{
     font-size: 15px;
     text-align: center;
-    margin-top: 0px;
+    margin: 0px;
     padding: 0px;
+    font-weight: 500;
+
 }
 //This is the Title, for pages.
 .post-title{
