--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,8 +85,7 @@
 .page-heading{
     font-size: 15px;
     text-align: center;
-    margin: 0px;
-    padding: 0px;
+    padding-bottom: 10px;
     font-weight: 500;
 
 }
