--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,8 +53,8 @@
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
 }*/
 
-.links{
-    text-decoration: none;
+strong{
+    font-weight: 500;
 }
 
 //Gallery
